<resources>
    <string name="app_name">Inellipse Text Recognition</string>
    <string name="select_image_for_text_recognition">select_image_for_text_recognition</string>
    <string name="detect">Detect</string>
    <string name="inellipse_text_recognition_app">Inellipse Text Recognition App</string>
    <string name="snap">Snap</string>
    <string name="take_img">Take a picture</string>
    <string name="detect_text">Detect Text</string>
    <string name="text_recognition_icon">text_recognition_icon</string>
    <string name="logout_button">logout_button</string>
</resources>